--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,6 +3,11 @@ app {
     host = "0.0.0.0"
     port = 8080
     timeout = 40 seconds
+  },
+  forex {
+    host:   "https://forex.1forge.com",
+    version : "1.0.3",
+    apikey: ""
   }
 }
 
