added basic scenario getting quote

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,10 +4,10 @@ app {
     port = 8080
     timeout = 40 seconds
   },
-  forex {
+  forge {
     host:   "https://forex.1forge.com",
     version : "1.0.3",
-    apikey: ""
+    apikey: "gujntnw3DyPBqMvbO5N9hx8bgENTOLua"
   }
 }
 
