added check for too old rates

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -7,7 +7,8 @@ app {
   forge {
     host:   "https://forex.1forge.com",
     version : "1.0.3",
-    apikey: "gujntnw3DyPBqMvbO5N9hx8bgENTOLua"
+    old-rate-threshold-in-secs: 300,
+    api-key: "gujntnw3DyPBqMvbO5N9hx8bgENTOLua"
   }
 }
 
