--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -8,7 +8,7 @@ app {
     host:   "https://forex.1forge.com",
     version : "1.0.3",
     old-rate-threshold-in-secs: 300,
-    api-key: "gujntnw3DyPBqMvbO5N9hx8bgENTOLua"
+    api-key: "????"
   }
 }
 
