added basic cache

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -7,8 +7,10 @@ app {
   forge {
     host:   "https://forex.1forge.com",
     version : "1.0.3",
-    old-rate-threshold-in-secs: 300,
     api-key: "????"
+  },
+  cache {
+    ttl: 5
   }
 }
 
